@@ -2,11 +2,15 @@ package week4.miniproject_4;
 
 import org.junit.jupiter.api.Test;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.ServerSocket;
 import java.net.SocketException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.channels.ClosedByInterruptException;
 import java.util.HashMap;
 import java.util.Map;
@@ -16,8 +20,8 @@ import java.util.concurrent.ThreadLocalRandom;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-
 public class FileServerTest {
+
     private static final String rootDirName = "static";
     private static final File rootDir = new File(rootDirName);
     private static final Random rand = new Random();
@@ -34,7 +38,7 @@ public class FileServerTest {
     private int port;
 
     private static int getNCores() {
-        String ncoresStr = System.getenv("COURSERA_GRADER_NCORES");
+        var ncoresStr = System.getenv("COURSERA_GRADER_NCORES");
         if (ncoresStr == null) {
             ncoresStr = System.getProperty("COURSERA_GRADER_NCORES");
         }
@@ -46,9 +50,9 @@ public class FileServerTest {
         }
     }
 
-    private static String getRandomFileContents(final int len) {
-        StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < len; i++) {
+    private static String getRandomFileContents(int len) {
+        var sb = new StringBuilder();
+        for (var i = 0; i < len; i++) {
             sb.append(rand.nextInt(10));
         }
         return sb.toString();
@@ -56,7 +60,7 @@ public class FileServerTest {
 
     private static void deleteRecursively(File f) throws IOException {
         if (f.isDirectory()) {
-            for (File c : Objects.requireNonNull(f.listFiles())) {
+            for (var c : Objects.requireNonNull(f.listFiles())) {
                 deleteRecursively(c);
             }
         }
@@ -69,10 +73,10 @@ public class FileServerTest {
     }
 
     private PCDPFilesystem getFilesystem() {
-        PCDPFilesystem fs = new PCDPFilesystem();
+        var fs = new PCDPFilesystem();
 
-        for (Map.Entry<String, String> entry : files.entrySet()) {
-            PCDPPath path = new PCDPPath(entry.getKey());
+        for (var entry : files.entrySet()) {
+            var path = new PCDPPath(entry.getKey());
             System.out.println(entry);
             fs.addFile(path, entry.getValue());
         }
@@ -82,16 +86,16 @@ public class FileServerTest {
 
     private HttpServer launchServer() throws IOException {
         System.err.println("\nLaunching server for " +
-                Thread.currentThread().getStackTrace()[2].getMethodName());
+            Thread.currentThread().getStackTrace()[2].getMethodName());
         port = ThreadLocalRandom.current().nextInt(3000, 9000);
 
-        final ServerSocket socket = new ServerSocket(port);
+        var socket = new ServerSocket(port);
         socket.setReuseAddress(true);
-        final PCDPFilesystem fs = getFilesystem();
+        var fs = getFilesystem();
 
         Runnable runner = () -> {
             try {
-                FileServer server = new FileServer();
+                var server = new FileServer();
                 server.run(socket, fs, getNCores());
             } catch (SocketException | ClosedByInterruptException s) {
                 // Do nothing, assume killed by main thread
@@ -100,36 +104,36 @@ public class FileServerTest {
             }
         };
 
-        Thread thread = new Thread(runner);
+        var thread = new Thread(runner);
 
         thread.start();
 
         return new HttpServer(thread, socket);
     }
 
-    private HttpResponse sendHttpRequest(final String path, final boolean print)
-            throws IOException {
+    private HttpResponse sendHttpRequest(String path, boolean print)
+        throws IOException {
         assert !path.startsWith("/");
 
         if (print) {
             System.err.print("Requesting " + path + "... ");
         }
 
-        URL obj = new URL("http://localhost:" + port + "/" + path);
+        var obj = URI.create("http://localhost:" + port + "/" + path).toURL();
 
-        HttpURLConnection con = (HttpURLConnection) obj.openConnection();
+        var con = (HttpURLConnection) obj.openConnection();
         con.setRequestMethod("GET");
         con.setConnectTimeout(5000); // 5 seconds
         con.setReadTimeout(5000); // 5 seconds
 
-        final int responseCode = con.getResponseCode();
+        var responseCode = con.getResponseCode();
 
-        final String responseStr;
+        String responseStr;
         if (responseCode != 404) {
-            BufferedReader in = new BufferedReader(
-                    new InputStreamReader(con.getInputStream()));
+            var in = new BufferedReader(
+                new InputStreamReader(con.getInputStream()));
             String inputLine;
-            StringBuilder response = new StringBuilder();
+            var response = new StringBuilder();
             while ((inputLine = in.readLine()) != null) {
                 response.append(inputLine);
             }
@@ -142,7 +146,7 @@ public class FileServerTest {
 
         if (print) {
             System.err.println("response code is " + responseCode +
-                    ", with content length " + responseStr.length());
+                ", with content length " + responseStr.length());
         }
 
         return new HttpResponse(responseCode, responseStr);
@@ -150,7 +154,7 @@ public class FileServerTest {
 
     @Test
     public void testTermination() throws IOException, InterruptedException {
-        final HttpServer server = launchServer();
+        var server = launchServer();
 
         // Termination
         server.socket.close();
@@ -160,9 +164,9 @@ public class FileServerTest {
 
     @Test
     public void testFileGet() throws IOException, InterruptedException {
-        final HttpServer server = launchServer();
+        var server = launchServer();
 
-        HttpResponse response = sendHttpRequest(rootDirName + "/A.txt", true);
+        var response = sendHttpRequest(rootDirName + "/A.txt", true);
         assertEquals(200, response.code);
         assertEquals(files.get("/static/A.txt"), response.body);
 
@@ -174,9 +178,9 @@ public class FileServerTest {
 
     @Test
     public void testFileGets() throws IOException, InterruptedException {
-        final HttpServer server = launchServer();
+        var server = launchServer();
 
-        HttpResponse response = sendHttpRequest(rootDirName + "/A.txt", true);
+        var response = sendHttpRequest(rootDirName + "/A.txt", true);
         assertEquals(200, response.code);
         assertEquals(files.get("/static/A.txt"), response.body);
 
@@ -192,9 +196,9 @@ public class FileServerTest {
 
     @Test
     public void testNestedFileGet() throws IOException, InterruptedException {
-        final HttpServer server = launchServer();
+        var server = launchServer();
 
-        HttpResponse response = sendHttpRequest(rootDirName + "/dir1/C.txt", true);
+        var response = sendHttpRequest(rootDirName + "/dir1/C.txt", true);
         assertEquals(200, response.code);
         assertEquals(files.get("/static/dir1/C.txt"), response.body);
 
@@ -206,9 +210,9 @@ public class FileServerTest {
 
     @Test
     public void testDoublyNestedFileGet() throws IOException, InterruptedException {
-        final HttpServer server = launchServer();
+        var server = launchServer();
 
-        HttpResponse response = sendHttpRequest(rootDirName + "/dir3/dir4/E.txt", true);
+        var response = sendHttpRequest(rootDirName + "/dir3/dir4/E.txt", true);
         assertEquals(200, response.code);
         assertEquals(files.get("/static/dir3/dir4/E.txt"), response.body);
 
@@ -220,9 +224,9 @@ public class FileServerTest {
 
     @Test
     public void testLargeFileGet() throws IOException, InterruptedException {
-        final HttpServer server = launchServer();
+        var server = launchServer();
 
-        HttpResponse response = sendHttpRequest(rootDirName + "/ABC.txt", true);
+        var response = sendHttpRequest(rootDirName + "/ABC.txt", true);
         assertEquals(200, response.code);
         assertEquals(files.get("/static/ABC.txt"), response.body);
 
@@ -234,9 +238,9 @@ public class FileServerTest {
 
     @Test
     public void testMissingFileGet() throws IOException, InterruptedException {
-        final HttpServer server = launchServer();
+        var server = launchServer();
 
-        HttpResponse response = sendHttpRequest(rootDirName + "/missing.txt", true);
+        var response = sendHttpRequest(rootDirName + "/missing.txt", true);
         assertEquals(404, response.code);
 
         // Termination
@@ -247,9 +251,9 @@ public class FileServerTest {
 
     @Test
     public void testMissingNestedFileGet() throws IOException, InterruptedException {
-        final HttpServer server = launchServer();
+        var server = launchServer();
 
-        HttpResponse response = sendHttpRequest(rootDirName + "/missingdir/missing.txt", true);
+        var response = sendHttpRequest(rootDirName + "/missingdir/missing.txt", true);
         assertEquals(404, response.code);
 
         // Termination
@@ -259,20 +263,22 @@ public class FileServerTest {
     }
 
     static class HttpResponse {
+
         public final int code;
         public final String body;
 
-        public HttpResponse(final int setCode, final String setBody) {
+        public HttpResponse(int setCode, String setBody) {
             code = setCode;
             body = setBody;
         }
     }
 
     static class HttpServer {
+
         public final Thread thread;
         public final ServerSocket socket;
 
-        HttpServer(final Thread setThread, final ServerSocket setSocket) {
+        HttpServer(Thread setThread, ServerSocket setSocket) {
             thread = setThread;
             socket = setSocket;
         }
